# fcr_ros2_3

./: .gitignore  README.md  build.sh
src/bringup_pkg/: CMakeLists.txt  package.xml
src/bringup_pkg/config/: global_params.yaml
src/bringup_pkg/launch/: aim_separation_acceptance.launch.py  chassis_sim.launch.py  coop_mvp.launch.py  coop_sim.launch.py  fcr_bringup.launch.py  fcr_debug.launch.py  fcr_gimbal_manual_test.launch.py  fcr_gimbal_speed_test.launch.py  fcr_mvp_cooperative_yaw.launch.py  fcr_mvp_full_follow.launch.py  fcr_mvp_gimbal_follow.launch.py  fcr_mvp_mode.launch.py  fcr_perception_observe.launch.py  fcr_sim_bringup.launch.py  gimbal_sim.launch.py  mvp_cooperative_yaw_acceptance.launch.py  mvp_full_follow_acceptance.launch.py  mvp_gimbal_acceptance.launch.py  mvp_mode_acceptance.launch.py  servo_2d_acceptance.launch.py  servo_chain_acceptance.launch.py
src/bringup_pkg/rviz/: fcr_system.rviz
src/external_control_pkg/: CMakeLists.txt  package.xml
src/external_control_pkg/config/: voice_gimbal_nudge.yaml
src/external_control_pkg/launch/: voice_control.launch.py
src/external_control_pkg/msg/: VoiceCommand.msg  VoiceDispatchStatus.msg
src/external_control_pkg/src/: chassis_command_router_node.cpp  command_router_node.cpp  keyboard_gimbal_control_node.cpp  voice_chassis_nudge_node.cpp  voice_command_dispatcher_node.cpp  voice_gimbal_nudge_node.cpp  wake_up_node.cpp
src/external_control_pkg/test/: test_voice_intent_contract.cpp
src/perception_pkg/: CMakeLists.txt  README.md  package.xml
src/perception_pkg/config/: depth_params.yaml  detection_params.yaml  target_state_params.yaml  tracking_params.yaml
src/perception_pkg/launch/: perception.launch.py
src/perception_pkg/models/: README.md  manifest.json
src/perception_pkg/scripts/: check_perception.sh  download_model.py  jetson_acceptance.sh  jetson_baseline_benchmark.sh  jetson_build_perception.sh  video_publisher.py
src/perception_pkg/src/: assignment_solver.cpp  byte_tracker.cpp  camera_motion_estimator.cpp  depth_estimator_node.cpp  detection_node.cpp  face_aim_node.cpp  multi_object_tracker.cpp  perception_pipeline.cpp  target_selector.cpp  target_state_estimator_node.cpp  tensorrt_backend.cpp  tracking_node.cpp  yolo_inference.cpp  yolo_processing.cpp
src/perception_pkg/test/: test_byte_tracker.cpp  test_camera_motion_estimator.cpp  test_multi_object_tracker.cpp  test_target_selector.cpp  test_tracking_launch.py  test_yolo_processing.cpp
src/remote_monitor_pkg/: CMakeLists.txt  README.md  package.xml
src/remote_monitor_pkg/config/: remote_monitor_params.yaml
src/remote_monitor_pkg/foxglove/: fcr_remote_monitor_layout.json
src/remote_monitor_pkg/launch/: remote_monitor.launch.py
src/remote_monitor_pkg/src/: perception_visualizer_node.cpp
src/robot_platform_pkg/: CMakeLists.txt  package.xml
src/robot_platform_pkg/config/: chassis_params.yaml  gimbal_params.yaml  imu_params.yaml  odometry_params.yaml
src/robot_platform_pkg/launch/: gimbal_bringup.launch.py  platform.launch.py
src/robot_platform_pkg/src/: chassis_driver_node.cpp  chassis_interface_impl.cpp  dji_rs2_protocol.cpp  feetech_sts3215_bus.cpp  gimbal_driver_node.cpp  gimbal_interface_impl.cpp  imu_driver_node.cpp  imu_interface_impl.cpp  odometry_interface_impl.cpp  odometry_node.cpp  platform_manager_node.cpp
src/robot_platform_pkg/test/: test_dji_rs2_protocol.cpp  test_feetech_sts3215_bus.cpp
src/servo_control_pkg/: CMakeLists.txt  package.xml  plugins.xml
src/servo_control_pkg/config/: allocator_params.yaml  base_pose_controller.yaml  gimbal_target_controller.yaml  ibvs_params.yaml  mvp_cooperative_yaw.yaml  mvp_follow_controller.yaml  mvp_full_follow.yaml  mvp_gimbal_only.yaml  pbvs_params.yaml  safety_filter.yaml  shot_reference_params.yaml
src/servo_control_pkg/launch/: mvp_2d_sim.launch.py  mvp_follow_core.launch.py  mvp_mock_test.launch.py  orbit_foxglove_2d_sim.launch.py  servo_control.launch.py  virtual_shot_2d_sim.launch.py
src/servo_control_pkg/src/: base_pose_controller_node.cpp  command_safety_filter_node.cpp  control_allocator.cpp  gimbal_target_controller_node.cpp  ibvs_controller.cpp  mvp_follow_controller_node.cpp  pbvs_controller.cpp  servo_controller_base.cpp  servo_manager_node.cpp  shot_reference_generator_node.cpp  velocity_commander_node.cpp
src/servo_control_pkg/test/: test_mvp_safety.cpp  test_mvp_yaw_control.cpp  test_target_input.cpp
src/simulation_pkg/: CMakeLists.txt  package.xml
src/simulation_pkg/launch/: gazebo.launch.py  rviz.launch.py  spawn_robot.launch.py  voice_gimbal_test.launch.py
src/simulation_pkg/scripts/: aim_mock_source.py  aim_separation_acceptance.py  camera_simulator.py  coop_sim.py  mock_detector.py  mock_target_publisher_node.py  mvp_mode_acceptance.py  servo_2d_acceptance.py  servo_bag_eval_node.py  servo_chain_acceptance.py  servo_chain_mock_source.py  simple_robot_sim_node.py  t07_mock_test.py  target_simulator.py  twist_stamped_to_twist.py
src/simulation_pkg/src/: gimbal_controller_plugin.cpp
src/simulation_pkg/urdf/: lekiwi_base.xacro  lekiwi_full.urdf.xacro  lekiwi_gimbal.xacro  lekiwi_sensors.xacro
src/simulation_pkg/worlds/: fcr_world.world
src/sony_camera_pkg/: CMakeLists.txt  README.md  package.xml
src/sony_camera_pkg/config/: sony_camera_params.yaml
src/sony_camera_pkg/launch/: sony_camera.launch.py
src/sony_camera_pkg/scripts/: install_crsdk.py
src/sony_camera_pkg/src/: sony_camera_node.cpp  sony_camera_streamer.cpp
src/teleop_control_pkg/: CMakeLists.txt  README.md  package.xml
src/teleop_control_pkg/config/: gimbal_keyboard_teleop.yaml  remote_control.yaml
src/teleop_control_pkg/launch/: gimbal_keyboard_teleop.launch.py  remote_chassis.launch.py  remote_control.launch.py  remote_platform.launch.py
src/teleop_control_pkg/scripts/: keyboard_gimbal_teleop.py  keyboard_platform_teleop.py
src/teleop_control_pkg/src/: command_mux_core.cpp  command_mux_node.cpp
src/teleop_control_pkg/test/: test_command_mux_core.cpp
src/vision_servo_msgs/: CMakeLists.txt  package.xml
src/vision_servo_msgs/msg/: AimTarget2D.msg  (+10 more)
(+103 files in other folders)
