<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!--
  @file package.xml
  @brief perception_pkg 包清单文件。

  感知管线包，实现从原始图像到 3D 目标位姿的完整处理链：
    - YOLO 目标检测（支持 YOLOv5/v8/TensorRT 后端）
    - 基于卡尔曼滤波的多目标跟踪（SORT/ByteTrack 风格）
    - 从深度图估计目标的 3D 空间位置

  所有节点均支持独立运行和可组合（ComposableNode）部署两种模式，
  通过 use_composition 启动参数切换。
  -->

  <name>perception_pkg</name>
  <version>0.1.0</version>
  <description>感知管线：YOLO 检测 + 多目标跟踪 + 深度估计</description>
  <maintainer email="dev@fcr-project.org">FCR Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 依赖（depend = build_depend + exec_depend） -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>   <!-- 可组合节点注册 -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>         <!-- 图像和相机信息消息 -->
  <depend>vision_servo_msgs</depend>   <!-- 自定义目标/检测消息 -->
  <depend>cv_bridge</depend>           <!-- libopencv-dev ↔ ROS 图像转换 -->
  <depend>image_transport</depend>     <!-- 高效的图像发布/订阅 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>             <!-- 坐标变换 -->
  <depend>tf2_geometry_msgs</depend>
  <depend>libopencv-dev</depend>              <!-- 图像处理与 DNN 推理 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
