<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!--
  @file package.xml
  @brief perception_pkg 包清单文件。

  感知管线包，实现从 Sony RGB 图像到 2D 检测与跟踪的处理链：
    - YOLOv5/v8 ONNX 目标检测（OpenCV DNN 后端）
    - 基于卡尔曼滤波和 IoU 关联的轻量多目标跟踪
    - 保留现有深度估计与仿真管线，双相机融合留待后续阶段
  -->

  <name>perception_pkg</name>
  <version>0.1.0</version>
  <description>融合前视觉感知：YOLO ONNX/TensorRT 检测与 2D 多目标跟踪</description>
  <maintainer email="dev@fcr-project.org">FCR Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 依赖（depend = build_depend + exec_depend） -->
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp_components</depend>
  <depend>rcl_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>         <!-- 图像和相机信息消息 -->
  <depend>std_msgs</depend>
  <depend>vision_servo_msgs</depend>   <!-- 自定义目标/检测消息 -->
  <depend>cv_bridge</depend>           <!-- libopencv-dev ↔ ROS 图像转换 -->
  <depend>image_transport</depend>     <!-- 高效的图像发布/订阅 -->
  <depend>message_filters</depend>     <!-- RGB 检测结果与深度图近似同步 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>             <!-- 坐标变换 -->
  <depend>tf2_geometry_msgs</depend>
  <depend>libopencv-dev</depend>              <!-- 图像处理与 DNN 推理 -->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
