<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remote_monitor_pkg</name>
  <version>0.1.0</version>
  <description>Read-only remote visualization and Foxglove monitoring for the FCR perception stack</description>
  <maintainer email="dev@fcr-project.org">FCR Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>vision_servo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
